chore: Fix race condition when using embedded Redis with external Proxy
Resolves #584

--- a/docker/8.4/nginx/laravel.conf
+++ b/docker/8.4/nginx/laravel.conf
@@ -47,8 +47,18 @@ server {
     # In embedded mode: proxies to localhost:8085 (Python FastAPI service)
     # In external mode: proxies to external container (e.g., m3u-proxy:38085)
     # Trailing slash in proxy_pass removes the /m3u-proxy prefix from the proxied request
-    location /m3u-proxy/ {
-        proxy_pass http://${M3U_PROXY_NGINX_TARGET}/;
+    # Use a regex location to capture the path after /m3u-proxy/ and forward it to the upstream
+    location ~ ^/m3u-proxy/(.*)$ {
+        # Use Docker embedded DNS resolver and a variable for proxy_pass so nginx
+        # doesn't fail to start when the upstream container (m3u-proxy) isn't present.
+        # Resolution will happen at request time instead of config load.
+        # When passing an IP address directly, the resolver directive is ignored (e.g.: containers inside a VPN network).
+        resolver 127.0.0.11 ipv6=off;
+        set $m3u_proxy_upstream "${M3U_PROXY_NGINX_TARGET}";
+
+        # Forward the captured path ($1) and preserve query string
+        proxy_pass http://$m3u_proxy_upstream/$1$is_args$args;
+
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -76,6 +86,11 @@ server {
         # Buffering settings for streaming
         proxy_buffering off;
         proxy_request_buffering off;
+    }
+
+    # Redirect bare /m3u-proxy to trailing slash variant
+    location = /m3u-proxy {
+        return 302 /m3u-proxy/;
     }
 
     # Websocket reverse proxy for Reverb
