--- a/docker-compose.proxy.yml
+++ b/docker-compose.proxy.yml
@@ -53,6 +53,7 @@ services:
       - REDIS_ENABLED=false # Disable embedded Redis
       - REDIS_SERVER_PORT=${REDIS_PORT:-6379}
       - REDIS_HOST=${REDIS_HOST:-redis}
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-changeme}
       
       # M3U Proxy Configuration (External)
       - M3U_PROXY_ENABLED=false # Disable embedded and use external m3u-proxy
@@ -95,6 +96,7 @@ services:
       - REDIS_ENABLED=true
       - REDIS_PORT=${REDIS_PORT:-6379}
       - REDIS_HOST=${REDIS_HOST:-redis}
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-changeme}
       - REDIS_DB=6 # 1-5 used by m3u-editor, so use 6 for m3u-proxy
       - ENABLE_REDIS_POOLING=true
       
@@ -142,11 +144,11 @@ services:
     volumes:
       - redis-data:/data
     restart: unless-stopped
-    command: redis-server --port ${REDIS_PORT:-6379} --appendonly no --save "" --maxmemory 256mb --maxmemory-policy allkeys-lru
+    command: redis-server --port ${REDIS_PORT:-6379} --requirepass ${REDIS_PASSWORD:-changeme} --appendonly no --save "" --maxmemory 256mb --maxmemory-policy allkeys-lru
     networks:
       - m3u-network
     healthcheck:
-      test: ["CMD", "redis-cli", "-p", "${REDIS_PORT:-6379}", "ping"]
+      test: ["CMD", "redis-cli", "-p", "${REDIS_PORT:-6379}", "-a", "${REDIS_PASSWORD:-changeme}", "ping"]
       interval: 10s
       timeout: 5s
       retries: 3
