--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -2,11 +2,49 @@ name: Dev
 on:
   push:
     branches: [dev]
+  workflow_dispatch:
+
+concurrency:
+  group: deploy-dev
+  cancel-in-progress: false
+
+env:
+  REGISTRY_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor
 
 jobs:
-  push-amd64:
-    name: Publish dev m3u-editor Docker image (amd64)
+  # Run CI checks first
+  ci-check:
+    name: CI Validation
+    uses: ./.github/workflows/ci.yml
+    secrets: inherit
+
+  # Extract version from config/dev.php
+  get-version:
+    name: Get Version
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.version.outputs.version }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Extract dev version from config
+        id: version
+        run: |
+          VERSION=$(grep -oP "'dev_version'\s*=>\s*'\K[^']+" config/dev.php | sed 's/-dev$//')
+          if [ -z "$VERSION" ]; then
+            echo "::error::Could not extract dev_version from config/dev.php"
+            exit 1
+          fi
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "📦 Dev version: $VERSION"
+
+  push-amd64:
+    name: Build & Push (amd64)
+    runs-on: ubuntu-latest
+    needs: [ci-check, get-version]
+    outputs:
+      digest: ${{ steps.build.outputs.digest }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,24 +59,32 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push amd64
-        uses: docker/build-push-action@v5
+        id: build
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev-amd64
+          tags: |
+            ${{ env.REGISTRY_IMAGE }}:dev-amd64
+            ${{ env.REGISTRY_IMAGE }}:dev-${{ needs.get-version.outputs.version }}-amd64
           build-args: |
             GIT_BRANCH=${{ github.ref_name }}
             GIT_COMMIT=${{ github.sha }}
             GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }}
             M3U_PROXY_REPO=https://github.com/${{ github.repository_owner }}/m3u-proxy.git
             M3U_PROXY_BRANCH=dev
+          cache-from: type=gha,scope=dev-amd64
+          cache-to: type=gha,mode=max,scope=dev-amd64
           provenance: false
           sbom: false
 
   push-arm64:
-    name: Publish dev m3u-editor Docker image (arm64)
+    name: Build & Push (arm64)
     runs-on: ubuntu-22.04-arm
+    needs: [ci-check, get-version]
+    outputs:
+      digest: ${{ steps.build.outputs.digest }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -53,32 +99,31 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push arm64
-        uses: docker/build-push-action@v5
+        id: build
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/arm64
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev-arm64
+          tags: |
+            ${{ env.REGISTRY_IMAGE }}:dev-arm64
+            ${{ env.REGISTRY_IMAGE }}:dev-${{ needs.get-version.outputs.version }}-arm64
           build-args: |
             GIT_BRANCH=${{ github.ref_name }}
             GIT_COMMIT=${{ github.sha }}
             GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }}
             M3U_PROXY_REPO=https://github.com/${{ github.repository_owner }}/m3u-proxy.git
             M3U_PROXY_BRANCH=dev
+          cache-from: type=gha,scope=dev-arm64
+          cache-to: type=gha,mode=max,scope=dev-arm64
           provenance: false
           sbom: false
 
   push-manifest:
-    name: Push Docker Manifest for dev
+    name: Create Multi-arch Manifest
     runs-on: ubuntu-latest
-    needs: [push-amd64, push-arm64]
+    needs: [get-version, push-amd64, push-arm64]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -88,11 +133,46 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Create manifest list
+      - name: Create and push dev manifest
         run: |
-          docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev \
-            ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev-amd64 \
-            ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev-arm64
+          docker buildx imagetools create -t ${{ env.REGISTRY_IMAGE }}:dev \
+            ${{ env.REGISTRY_IMAGE }}:dev-amd64 \
+            ${{ env.REGISTRY_IMAGE }}:dev-arm64
 
-      - name: Push manifest list
-        run: docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/m3u-editor:dev
+      - name: Create and push versioned manifest
+        run: |
+          docker buildx imagetools create -t ${{ env.REGISTRY_IMAGE }}:dev-${{ needs.get-version.outputs.version }} \
+            ${{ env.REGISTRY_IMAGE }}:dev-${{ needs.get-version.outputs.version }}-amd64 \
+            ${{ env.REGISTRY_IMAGE }}:dev-${{ needs.get-version.outputs.version }}-arm64
+
+      - name: Inspect manifests
+        run: |
+          echo "📦 Dev (latest) manifest:"
+          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:dev
+          echo ""
+          echo "📦 Versioned manifest (dev-${{ needs.get-version.outputs.version }}):"
+          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:dev-${{ needs.get-version.outputs.version }}
+
+      - name: Summary
+        run: |
+          echo "## 🐳 Docker Images Published" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Tag | Description |" >> $GITHUB_STEP_SUMMARY
+          echo "|-----|-------------|" >> $GITHUB_STEP_SUMMARY
+          echo "| \`${{ env.REGISTRY_IMAGE }}:dev\` | Latest dev build |" >> $GITHUB_STEP_SUMMARY
+          echo "| \`${{ env.REGISTRY_IMAGE }}:dev-${{ needs.get-version.outputs.version }}\` | Pinned version |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Commit:** \`${{ github.sha }}\`" >> $GITHUB_STEP_SUMMARY
+
+  notify-failure:
+    name: Notify on Failure
+    runs-on: ubuntu-latest
+    needs: [push-amd64, push-arm64, push-manifest]
+    if: failure()
+    steps:
+      - name: Report failure
+        run: |
+          echo "::error::Dev deployment failed! Check the workflow logs."
+          echo "Failed job: ${{ github.workflow }}"
+          echo "Commit: ${{ github.sha }}"
+          echo "Branch: ${{ github.ref_name }}"
