fix: create jobs.sqlite before migrations in CI
The jobs database connection uses SQLite regardless of main DB.
Creates the empty file before running migrations to prevent
'Database file does not exist' error.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,6 +157,7 @@ jobs:
         run: |
           cp .env.example .env || echo "APP_KEY=" > .env
           php artisan key:generate
+          touch database/jobs.sqlite
           php artisan migrate --force
 
       - name: Run Pest tests
