--- a/docker/8.4/supervisord.conf
+++ b/docker/8.4/supervisord.conf
@@ -93,7 +93,7 @@ priority=6
 ; Starts only if M3U_PROXY_START_EMBEDDED=true (when not using external service)
 ;-----------------------------------------
 [program:m3u-proxy]
-command=/opt/m3u-proxy/.venv/bin/python /opt/m3u-proxy/main.py
+command=/usr/bin/python3 /opt/m3u-proxy/main.py
 user=%(ENV_SUPERVISOR_PHP_USER)s
 autostart=%(ENV_M3U_PROXY_START_EMBEDDED)s
 autorestart=true
