--- a/docker/8.4/supervisord.conf
+++ b/docker/8.4/supervisord.conf
@@ -1,9 +1,13 @@
 [unix_http_server]
 file=/run/supervisord.sock
 chmod=0700
+username=m3ue
+password=m3ue
 
 [supervisorctl]
 serverurl=unix:///run/supervisord.sock
+username=m3ue
+password=m3ue
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
