feat: add supervisor config for network broadcast and HLS GC workers
- Add network-broadcast program for continuous HLS broadcasting
- Add hls-gc program for periodic segment cleanup
- Add NETWORK_BROADCAST_ENABLED env var to start-container
- Add REDIS_PASSWORD to docker-compose files for auth

--- a/docker-compose.aio.yml
+++ b/docker-compose.aio.yml
@@ -29,6 +29,7 @@ services:
       - REDIS_ENABLED=true # Enable embedded Redis
       - REDIS_SERVER_PORT=${REDIS_PORT:-63790}
       - REDIS_HOST=${REDIS_HOST:-localhost}
+      - REDIS_PASSWORD=${M3U_PROXY_TOKEN:-changeme} # Must match what start-container sets
       
       # M3U Proxy Configuration (External)
       - M3U_PROXY_ENABLED=true # Use embedded m3u-proxy instance
