--- a/docker/8.4/supervisord.conf
+++ b/docker/8.4/supervisord.conf
@@ -93,6 +93,38 @@ stopwaitsecs=3600
 priority=6
 
 ;-----------------------------------------
+; Network Broadcast Worker
+; Manages continuous HLS broadcasting for Networks (pseudo-TV channels)
+; Enable with NETWORK_BROADCAST_ENABLED=true
+;-----------------------------------------
+[program:network-broadcast]
+command=/usr/bin/php /var/www/html/artisan network:broadcast --interval=10
+user=%(ENV_SUPERVISOR_PHP_USER)s
+autostart=%(ENV_NETWORK_BROADCAST_ENABLED)s
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/log/network-broadcast.log
+stdout_logfile_maxbytes=10MB
+stdout_logfile_backups=3
+priority=8
+
+;-----------------------------------------
+; HLS Garbage Collector
+; Periodically removes old HLS segments/playlists to reclaim disk space
+; Enable with HLS_GC_ENABLED=true
+;-----------------------------------------
+[program:hls-gc]
+command=/usr/bin/php /var/www/html/artisan hls:gc --loop --interval=%(ENV_HLS_GC_INTERVAL)s --threshold=%(ENV_HLS_GC_AGE_THRESHOLD)s --no-interaction
+user=%(ENV_SUPERVISOR_PHP_USER)s
+autostart=%(ENV_HLS_GC_ENABLED)s
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/log/hls-gc.log
+stdout_logfile_maxbytes=10MB
+stdout_logfile_backups=3
+priority=9
+
+;-----------------------------------------
 ; M3U Proxy (embedded Python FastAPI proxy service)
 ; Starts only if M3U_PROXY_START_EMBEDDED=true (when not using external service)
 ;-----------------------------------------
