chore: add HLS and network broadcast env vars to .env.example
- Add HLS_TEMP_DIR, HLS_GC_ENABLED, HLS_GC_INTERVAL, HLS_GC_AGE_THRESHOLD
- Add NETWORK_BROADCAST_ENABLED for pseudo-TV channel broadcasting

--- a/.env.example
+++ b/.env.example
@@ -82,3 +82,18 @@ REVERB_SCHEME=http
 # M3U_PROXY_ENABLED=true              # true = embedded, false/null = external service
 # M3U_PROXY_HOST=127.0.0.1            # Host for embedded proxy (localhost)
 # M3U_PROXY_PORT=8085                 # Port for embedded proxy (internal)
+# HLS storage & garbage collection
+# HLS_TEMP_DIR: where HLS segments are written (default below)
+# HLS_GC_ENABLED: enable background garbage collector (true/false)
+# HLS_GC_INTERVAL: GC loop interval in seconds (default 600)
+# HLS_GC_AGE_THRESHOLD: delete files older than this many seconds (default 7200)
+HLS_TEMP_DIR=/var/www/html/storage/app/hls-segments
+HLS_GC_ENABLED=true
+HLS_GC_INTERVAL=600
+HLS_GC_AGE_THRESHOLD=7200
+
+# Network Broadcasting (pseudo-TV channels)
+# NETWORK_BROADCAST_ENABLED: enable the network broadcast service (true/false)
+# When enabled, networks with broadcast_enabled=true will stream live HLS content
+NETWORK_BROADCAST_ENABLED=true
+
