--- a/docker/8.4/nginx/xtream.conf
+++ b/docker/8.4/nginx/xtream.conf
@@ -103,7 +103,7 @@ server {
     # /m3u-proxy/hls/<hash>/playlist.m3u8
     # /m3u-proxy/hls/<hash>/segment
     location ~ "^/m3u-proxy/hls/[A-Za-z0-9 -]+/[playlist\.m3u8|segment]+$" {
-      proxy_pass http://127.0.0.1:36400;
+      proxy_pass http://127.0.0.1:${APP_PORT};
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Real-IP $remote_addr;
