--- a/docker/8.4/nginx/xtream.conf
+++ b/docker/8.4/nginx/xtream.conf
@@ -90,7 +90,7 @@ server {
       proxy_set_header X-Real-IP $remote_addr;
     }
 
-    ### M3U-PROXY DEFAULT MPEG-TS STREAMS - M3U8 ###
+    ### M3U-PROXY DEFAULT MPEG-TS STREAMS ###
     # /m3u-proxy/stream/<hash>
     location ~ "^/m3u-proxy/stream/[A-Za-z0-9 -]+$" {
       proxy_pass http://127.0.0.1:${APP_PORT};
@@ -99,7 +99,7 @@ server {
       proxy_set_header X-Real-IP $remote_addr;
     }
 
-    ### M3U-PROXY DEFAULT HLS STREAMS - ANY EXTENSION ###
+    ### M3U-PROXY DEFAULT HLS STREAMS ###
     # /m3u-proxy/hls/<hash>/playlist.m3u8
     # /m3u-proxy/hls/<hash>/segment
     location ~ "^/m3u-proxy/hls/[A-Za-z0-9 -]+/[playlist\.m3u8|segment]+$" {
