fix: Update .gitignore to exclude additional configuration and log files

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,9 @@ data/
 *FIXES*.md
 app/context.md
 docs/provider-profiles-plan.md
+.github/agents
+.github/instructions
+.github/prompts
+*.log
+docker-compose.ci-test.yml
+docker-compose.local.yml
