--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -24,6 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.version.outputs.version }}
+      proxy_commit: ${{ steps.proxy.outputs.commit }}
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -38,6 +39,17 @@ jobs:
           fi
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "📦 Dev version: $VERSION"
+
+      - name: Get m3u-proxy latest commit
+        id: proxy
+        run: |
+          PROXY_COMMIT=$(git ls-remote https://github.com/${{ github.repository_owner }}/m3u-proxy.git refs/heads/dev | cut -f1)
+          if [ -z "$PROXY_COMMIT" ]; then
+            echo "::warning::Could not fetch m3u-proxy commit, using timestamp for cache bust"
+            PROXY_COMMIT=$(date +%s)
+          fi
+          echo "commit=$PROXY_COMMIT" >> $GITHUB_OUTPUT
+          echo "📦 m3u-proxy commit: $PROXY_COMMIT"
 
   push-amd64:
     name: Build & Push (amd64)
@@ -74,6 +86,7 @@ jobs:
             GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }}
             M3U_PROXY_REPO=https://github.com/${{ github.repository_owner }}/m3u-proxy.git
             M3U_PROXY_BRANCH=dev
+            M3U_PROXY_COMMIT=${{ needs.get-version.outputs.proxy_commit }}
           cache-from: type=gha,scope=dev-amd64
           cache-to: type=gha,mode=max,scope=dev-amd64
           provenance: false
@@ -114,6 +127,7 @@ jobs:
             GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }}
             M3U_PROXY_REPO=https://github.com/${{ github.repository_owner }}/m3u-proxy.git
             M3U_PROXY_BRANCH=dev
+            M3U_PROXY_COMMIT=${{ needs.get-version.outputs.proxy_commit }}
           cache-from: type=gha,scope=dev-arm64
           cache-to: type=gha,mode=max,scope=dev-arm64
           provenance: false
