Add new environment variables for retry configuration

--- a/.env.example
+++ b/.env.example
@@ -82,3 +82,12 @@ REVERB_SCHEME=http
 # M3U_PROXY_ENABLED=true              # true = embedded, false/null = external service
 # M3U_PROXY_HOST=127.0.0.1            # Host for embedded proxy (localhost)
 # M3U_PROXY_PORT=8085                 # Port for embedded proxy (internal)
+
+STUCK_PROCESSING_MINUTES=120
+
+AUTO_RETRY_503_ENABLED=true
+AUTO_RETRY_503_MAX=3
+AUTO_RETRY_503_COOLDOWN_MINUTES=10
+AUTO_RETRY_503_DELAY_MIN_SECONDS=300
+AUTO_RETRY_503_DELAY_MAX_SECONDS=900
+
